--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/danetomseth/twitter-js#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "lodash": "^4.6.1",
     "swig": "^1.4.2"
   }
 }
